--- a/SCME.UI/PagesTech/PasswordPage.xaml
+++ b/SCME.UI/PagesTech/PasswordPage.xaml
@@ -36,9 +36,9 @@
             <Button Grid.Column="2" Grid.Row="3" Content="{x:Static res:Resources.Ok}" Width="250" Padding="10" Click="BtnOk_Clicked" />
 
             <customControls:ValidatingTextBox x:Name="tbPassword" x:FieldModifier="private"
-                         Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="3"
+                         Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="3" Height="80" VerticalContentAlignment="Center"
                          TextBlock.TextAlignment="Center" TextBlock.FontSize="26"
-                         Text="" Focusable="True" Padding="8"/>
+                          Focusable="True" Padding="8"/>
 
             <Label x:Name="lblIncorrect" Grid.Column="1" Grid.Row="2" HorizontalContentAlignment="Center"
                    FontSize="18" HorizontalAlignment="Center" Visibility="Hidden"
