--- a/SCME.UI/PagesTech/DVdtPage.xaml
+++ b/SCME.UI/PagesTech/DVdtPage.xaml
@@ -18,14 +18,28 @@
         <ui:DvdtTestTypeToVisibilityUnConverter x:Key="DT2VB"/>
 
 
-        <Style TargetType="{x:Type Label}" BasedOn="{StaticResource CLabelStyle}">
-            <Setter Property="Padding" Value="5,0,0,0" />
-            <Setter Property="Height" Value="62" />
+
+        <Style TargetType="{x:Type Label}" BasedOn="{StaticResource {x:Type Label}}">
+            <Setter Property="Padding" Value="5" />
+            <Setter Property="Margin" Value="10,10,7,10"></Setter>
+            <Setter Property="HorizontalContentAlignment" Value="Right"></Setter>
+        </Style>
+
+        <Style TargetType="{x:Type ComboBox}" BasedOn="{StaticResource CComboboxStyle}">
+            <Setter Property="Margin" Value="10,10,7,10"></Setter>
+        </Style>
+
+
+        <Style TargetType="customControls:ValidatingTextBox" BasedOn="{StaticResource {x:Type customControls:ValidatingTextBox}}">
+            <Setter Property="Margin" Value="10,10,7,10"></Setter>
+            <Setter Property="VerticalAlignment" Value="Center"></Setter>
+            <Setter Property="HorizontalContentAlignment" Value="Right"></Setter>
         </Style>
 
         <Style TargetType="{x:Type Button}" BasedOn="{StaticResource CButtonStyle}">
             <Setter Property="Margin" Value="10,0" />
         </Style>
+
 
         <Style x:Key="StLblStyle" TargetType="{x:Type Label}" BasedOn="{StaticResource CLabelStyle}">
             <Setter Property="Height" Value="50" />
@@ -77,49 +91,47 @@
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
-                <Label Grid.Column="0" Grid.Row="0" Content="{x:Static res:Resources.Mode}" />
-                <ComboBox Grid.Column="1" Grid.Row="0" Padding="5" Margin="10"
+                <Label Grid.Column="0" Grid.Row="0" Content="{x:Static res:Resources.Mode}" HorizontalAlignment="Left" />
+                <ComboBox Grid.Column="1" Grid.Row="0"
                               ItemsSource="{Binding Source={StaticResource DataFromTestdVdtTypeEnum}}"
-                              SelectedItem="{Binding ElementName=dVdtPage, Path=Parameters.Mode, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource E2S}}"
-                              Style="{StaticResource CComboboxStyle}" />
-                
-                <Label Grid.Column="0" Grid.Row="1" Content="{x:Static res:Resources.DvDtVoltage}" />
-                <customControls:ValidatingTextBox Grid.Column="1" Grid.Row="1" Padding="5" Margin="10"
+                              SelectedItem="{Binding ElementName=dVdtPage, Path=Parameters.Mode, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource E2S}}" />
+
+                <Label Grid.Column="0" Grid.Row="1" Content="{x:Static res:Resources.DvDtVoltage}" HorizontalAlignment="Left" />
+                <customControls:ValidatingTextBox Grid.Column="1" Grid.Row="1" 
                                                 TextBlock.TextAlignment="Right" Maximum="10000" Minimum="0"
                                                 IsNumeric="True"
                                                 Text="{Binding Parameters.Voltage, ElementName=dVdtPage, UpdateSourceTrigger=PropertyChanged}" />
                
                 <Label Grid.Column="0" Grid.Row="2" Content="{x:Static res:Resources.DvdtVoltageRate}" 
-                        Visibility="{Binding ElementName=dVdtPage, Path=Parameters.Mode, Converter={StaticResource DT2V}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                <ComboBox Grid.Column="1" Grid.Row="2" Padding="5" Margin="10"
+                        Visibility="{Binding ElementName=dVdtPage, Path=Parameters.Mode, Converter={StaticResource DT2V}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" />
+                <ComboBox Grid.Column="1" Grid.Row="2"
                               ItemsSource="{Binding Source={StaticResource DataFromTestdVdtVoltageRateEnum}}"
                               SelectedItem="{Binding Parameters.VoltageRate, Converter={StaticResource E2S}, ElementName=dVdtPage, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                              Style="{StaticResource CComboboxStyle}" 
                               Visibility="{Binding Parameters.Mode, Converter={StaticResource DT2V}, ElementName=dVdtPage,Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
 
-                
 
-                <Label Grid.Column="0" Grid.Row="3" Content="{x:Static res:Resources.DvdtVoltageRateOffSet}" 
+
+                <Label Grid.Column="0" Grid.Row="3" Content="{x:Static res:Resources.DvdtVoltageRateOffSet}" HorizontalAlignment="Left" 
                         Visibility="{Binding ElementName=dVdtPage, Path=Parameters.Mode, Converter={StaticResource DT2VB}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
-                <customControls:ValidatingTextBox Grid.Column="1" Grid.Row="3" Padding="5" Margin="10"
+                <customControls:ValidatingTextBox Grid.Column="1" Grid.Row="3" 
                                                 Visibility="{Binding ElementName=dVdtPage, Path=Parameters.Mode, Converter={StaticResource DT2VB}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                                 TextBlock.TextAlignment="Right" Maximum="2000" Minimum="50"
                                                 IsNumeric="True"
-                                                Text="{Binding Parameters.VoltageRateOffSet, ElementName=dVdtPage, UpdateSourceTrigger=PropertyChanged}" />       
-                       
-                <Label Grid.Column="0" Grid.Row="4" Content="{x:Static res:Resources.DvdtConfirmationCount}" 
-                        Visibility="{Binding ElementName=dVdtPage,Path=Parameters.Mode, Converter={StaticResource DT2V}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                <customControls:ValidatingTextBox Grid.Column="1" Grid.Row="4" Padding="5" Margin="10"
+                                                Text="{Binding Parameters.VoltageRateOffSet, ElementName=dVdtPage, UpdateSourceTrigger=PropertyChanged}" />
+
+                <Label Grid.Column="0" Grid.Row="4" Content="{x:Static res:Resources.DvdtConfirmationCount}" HorizontalAlignment="Left" 
+                        Visibility="{Binding ElementName=dVdtPage,Path=Parameters.Mode, Converter={StaticResource DT2V}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"  />
+                <customControls:ValidatingTextBox Grid.Column="1" Grid.Row="4"
                                                 Visibility="{Binding ElementName=dVdtPage, Path=Parameters.Mode, Converter={StaticResource DT2V}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                                 TextBlock.TextAlignment="Right" Maximum="100" Minimum="1"
                                                 IsNumeric="True"
                                                 Text="{Binding Parameters.ConfirmationCount, ElementName=dVdtPage, UpdateSourceTrigger=PropertyChanged}" />
 
-                <Label Grid.Column="0" Grid.Row="5" Content="{x:Static res:Resources.DvdtVoltageRateLimit}" 
+                <Label Grid.Column="0" Grid.Row="5" Content="{x:Static res:Resources.DvdtVoltageRateLimit}" HorizontalAlignment="Left" 
                         Visibility="{Binding ElementName=dVdtPage, Path=Parameters.Mode, Converter={StaticResource DT2VB}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                <customControls:ValidatingTextBox Grid.Column="1" Grid.Row="5" Padding="5" Margin="10"
+                <customControls:ValidatingTextBox Grid.Column="1" Grid.Row="5" 
                                                 Visibility="{Binding ElementName=dVdtPage, Path=Parameters.Mode, Converter={StaticResource DT2VB}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                                 TextBlock.TextAlignment="Right" Maximum="2500" Minimum="500"
                                                 IsNumeric="True"
@@ -129,39 +141,39 @@
 
 
 
-                <Label Content="{x:Static res:Resources.Height_Prof}"   Grid.Column="0"  Grid.Row="6" />
-                <customControls:ValidatingTextBox Grid.Column="1"  Grid.Row="6" Padding="5" Margin="10"
+                <Label Content="{x:Static res:Resources.Height_Prof}"   Grid.Column="0"  Grid.Row="6" HorizontalAlignment="Left" />
+                <customControls:ValidatingTextBox Grid.Column="1"  Grid.Row="6" 
                           TextBlock.TextAlignment="Right" IsNumeric="True" Maximum="100000" Minimum="0"
                           Text="{Binding ClampParameters.Height, ElementName=dVdtPage}" />
-                
-                <Label Content="{x:Static res:Resources.Temp}"  Grid.Column="0"  Grid.Row="7" />
-                <customControls:ValidatingTextBox Grid.Column="1" Grid.Row="7"  Padding="5" Margin="10"
+
+                <Label Content="{x:Static res:Resources.Temp}"  Grid.Column="0"  Grid.Row="7" HorizontalAlignment="Left" />
+                <customControls:ValidatingTextBox Grid.Column="1" Grid.Row="7" 
                           TextBlock.TextAlignment="Right" IsNumeric="True" Maximum="200" Minimum="5"
                           Text="{Binding Temperature, ElementName=dVdtPage}" />
 
-                <Label Content="{x:Static res:Resources.Force}"  Grid.Column="0"  Grid.Row="8" />
-                <customControls:ValidatingTextBox Grid.Column="1" Grid.Row="8"  Padding="5" Margin="10"
+                <Label Content="{x:Static res:Resources.Force}"  Grid.Column="0"  Grid.Row="8" HorizontalAlignment="Left" />
+                <customControls:ValidatingTextBox Grid.Column="1" Grid.Row="8"
                           TextBlock.TextAlignment="Right" IsNumeric="True" Maximum="200" Minimum="0"
                           Text="{Binding ClampParameters.CustomForce, ElementName=dVdtPage}" />
 
-                <Label Grid.Column="0" x:Name="lblTitleTop" Grid.Row="9" Content="{x:Static res:Resources.TopTempName}" />
-                <Label Grid.Column="1" Grid.Row="9" Content="0" x:Name="TopTempLabel" HorizontalAlignment="Right" Background="LightGreen" Margin="0,0,7,0" />
+                <Label Grid.Column="0" x:Name="lblTitleTop" Grid.Row="9" Content="{x:Static res:Resources.TopTempName}" HorizontalAlignment="Left" />
+                <Label Grid.Column="1" Grid.Row="9" Content="0" x:Name="TopTempLabel" Background="LightGreen" />
 
-                <Label Grid.Column="0"  x:Name="lblTitleBot" Grid.Row="10" Content="{x:Static res:Resources.BotTempName}" />
-                <Label Grid.Column="1" x:Name="BotTempLabel"  Grid.Row="10" HorizontalAlignment="Right" Content="0" Background="LightGreen" Height="Auto"  Margin="0,0,7,0" />
+                <Label Grid.Column="0"  x:Name="lblTitleBot" Grid.Row="10" Content="{x:Static res:Resources.BotTempName}" HorizontalAlignment="Left" />
+                <Label Grid.Column="1" x:Name="BotTempLabel"  Grid.Row="10" Content="0" Background="LightGreen" Height="Auto"  />
 
-                <Label Content="Результат" Grid.Column="0"  Grid.Row="11" />
-                <Label Name="labelResult" Grid.Column="1" Grid.Row="11" Margin="0,0,7,0" FontSize="{StaticResource FontSize26}" HorizontalContentAlignment="Right" />
+                <Label Content="Результат" Grid.Column="0"  Grid.Row="11" HorizontalAlignment="Left"  />
+                <Label Name="labelResult" Grid.Column="1" Grid.Row="11"  FontSize="{StaticResource FontSize26}" HorizontalContentAlignment="Right" />
 
-                <Label Content="{x:Static res:Resources.DvdtVoltageRate}" Grid.Column="0"  Grid.Row="12" 
+                <Label Content="{x:Static res:Resources.DvdtVoltageRate}" Grid.Column="0"  Grid.Row="12" HorizontalAlignment="Left" 
                               Visibility="{Binding  Parameters.Mode, ElementName=dVdtPage, Converter={StaticResource DT2VB}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                <Label Name="labelVoltageRate" Grid.Column="1" Grid.Row="12" Margin="0,0,7,0"   
+                <Label Name="labelVoltageRate" Grid.Column="1" Grid.Row="12" 
                             Visibility="{Binding Parameters.Mode,ElementName=dVdtPage, Converter={StaticResource DT2VB}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                        HorizontalContentAlignment="Right" FontSize="{StaticResource FontSize26}" Height="Auto" />
 
-                <Label Name="lblFault" x:FieldModifier="private" Background="Tomato" Height="Auto" Padding="10"
+                <Label Name="lblFault" x:FieldModifier="private" Background="Tomato" Height="Auto"
                        Grid.Column="0" Grid.Row="13" Grid.ColumnSpan="2" Content="Fault" />
-                <Label Name="lblWarning" x:FieldModifier="private" Background="Gold" Height="Auto" Padding="10"
+                <Label Name="lblWarning" x:FieldModifier="private" Background="Gold" Height="Auto" 
                        Grid.Column="0" Grid.Row="14" Grid.ColumnSpan="2" Content="Warning" />
 
             </Grid>
