--- a/SCME.UI/PagesTech/IHPage.xaml
+++ b/SCME.UI/PagesTech/IHPage.xaml
@@ -11,9 +11,16 @@
       Title="{x:Static res:Resources.IH}">
 
     <Page.Resources>
-        <Style TargetType="{x:Type Label}" BasedOn="{StaticResource CLabelStyle}">
-            <Setter Property="Padding" Value="5,0,0,0" />
-            <Setter Property="Height" Value="62" />
+        <Style TargetType="{x:Type Label}" BasedOn="{StaticResource {x:Type Label}}">
+            <Setter Property="Padding" Value="5" />
+            <Setter Property="Margin" Value="10,10,7,10"></Setter>
+            <Setter Property="HorizontalContentAlignment" Value="Right"></Setter>
+        </Style>
+
+        <Style TargetType="customControls:ValidatingTextBox" BasedOn="{StaticResource {x:Type customControls:ValidatingTextBox}}">
+            <Setter Property="Margin" Value="10,10,7,10"></Setter>
+            <Setter Property="VerticalAlignment" Value="Center"></Setter>
+            <Setter Property="HorizontalContentAlignment" Value="Right"></Setter>
         </Style>
 
         <Style TargetType="{x:Type Button}" BasedOn="{StaticResource CButtonStyle}">
@@ -51,17 +58,17 @@
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
 
-                <Label Grid.Column="0" Grid.Row="0" Content="{x:Static res:Resources.IHItm}"/>
-                <customControls:ValidatingTextBox x:Name="vtbItm" Grid.Column="2" Grid.Row="0" Padding="5" Margin="10,9,10,10" TextBlock.TextAlignment="Right" IsNumeric="True" Minimum="500" Maximum="2000" Text="{Binding Parameters.Itm, ElementName=ihPage, UpdateSourceTrigger=PropertyChanged}"/>
+                <Label Grid.Column="0" Grid.Row="0" Content="{x:Static res:Resources.IHItm}" HorizontalAlignment="Left"/>
+                <customControls:ValidatingTextBox x:Name="vtbItm" Grid.Column="2" Grid.Row="0" TextBlock.TextAlignment="Right" IsNumeric="True" Minimum="500" Maximum="2000" Text="{Binding Parameters.Itm, ElementName=ihPage, UpdateSourceTrigger=PropertyChanged}"/>
 
-                <Label Grid.Column="0" Grid.Row="2" Content="{x:Static res:Resources.IHIh}"/>
-                <Label Grid.Column="1" Grid.Row="2" Content="0" x:Name="lbIh" FontSize="{StaticResource FontSize26}" Margin="0,0,7,0" Height="Auto"/>
+                <Label Grid.Column="0" Grid.Row="2" Content="{x:Static res:Resources.IHIh}" HorizontalAlignment="Left"/>
+                <Label Grid.Column="1" Grid.Row="2" Content="0" x:Name="lbIh" FontSize="{StaticResource FontSize26}"  />
 
                 <Label x:Name="lblTitleTop" Grid.Column="0" Grid.Row="3" HorizontalAlignment="Left" Content="{x:Static res:Resources.TopTempName}" />
-                <Label x:Name="TopTempLabel" Grid.Column="1" Grid.Row="3" Content="0" HorizontalAlignment="Left" Background="LightGreen" Margin="50, 0, 0, 0"/>
+                <Label x:Name="TopTempLabel" Grid.Column="1" Grid.Row="3" Content="0" Background="LightGreen"/>
 
                 <Label x:Name="lblTitleBot" Grid.Column="0" Grid.Row="4" HorizontalAlignment="Left" Content="{x:Static res:Resources.BotTempName}" />
-                <Label x:Name="BotTempLabel" Grid.Column="1" Grid.Row="4" Content="0" HorizontalAlignment="Left" Background="LightGreen" Margin="50, 0, 0, 0"/>
+                <Label x:Name="BotTempLabel" Grid.Column="1" Grid.Row="4" Content="0" Background="LightGreen" />
 
                 <Label Grid.Column="0" Grid.Row="6" Grid.ColumnSpan="2" x:Name="lbFaultReason" Content="FaultReason" FontSize="{StaticResource FontSize26}" Background="Tomato"/>
                 <Label Grid.Column="0" Grid.Row="7" Grid.ColumnSpan="2" x:Name="lbWarning" Content="Warning" FontSize="{StaticResource FontSize26}" Background="Gold"/>
