--- a/SCME.UI/PagesUser/LoginPage.xaml
+++ b/SCME.UI/PagesUser/LoginPage.xaml
@@ -6,76 +6,72 @@
       xmlns:res="clr-namespace:SCME.UI.Properties"
       xmlns:customControl="clr-namespace:SCME.UI.CustomControl"
       xmlns:customControls="WpfControlLibrary"
+      xmlns:ui="clr-namespace:SCME.UI"
       mc:Ignorable="d" d:DesignWidth="1280" d:DesignHeight="944"
       x:Name="loginPage"
       Title="{x:Static res:Resources.LoginPage_Title}" Loaded="LoginPage_Loaded">
-    
     <Page.Resources>
-
-        <Style TargetType="{x:Type Label}" BasedOn="{StaticResource CLabelStyle}">
-            <Setter Property="Foreground" Value="{StaticResource xWhite1}" />
-        </Style>
-
-        <Style TargetType="{x:Type Button}" BasedOn="{StaticResource CButtonStyle}" />
-
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/Controls.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Page.Resources>
 
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="25*" />
+            <ColumnDefinition Width="75*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="28*" />
             <RowDefinition Height="7*" />
             <RowDefinition Height="7*" />
             <RowDefinition Height="55*" />
-            <RowDefinition Height="10*" />
+            <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
 
         <Border Grid.Column="1" Grid.Row="0"
-                Grid.ColumnSpan="2" Grid.RowSpan="5"
+                 Grid.RowSpan="5"
                 Background="{StaticResource xPurple1}"
                 Margin="0,0,0,0" />
 
-        <customControl:ListBoxProfiles x:Name="accountsListBox"
-                                Grid.Column="0" Grid.Row="0" Grid.RowSpan="4"
-                                SelectionChanged="AccountsListBox_OnSelectionChanged"
-                                 IsEditable="False" />
+        <customControls:ListViewMouseLeftButtonScroll x:Name="accountsListBox"
+                                Grid.Column="0" Grid.Row="0" Grid.RowSpan="4" Style="{StaticResource DefaultListView}"
+                                SelectionChanged="AccountsListBox_OnSelectionChanged">
+            <ListView.ItemTemplate>
+                <DataTemplate DataType="ui:CAccount">
+                    <Label Name="label" Content="{Binding Path=Name}" Foreground="{TemplateBinding TextBlock.Foreground}" />
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </customControls:ListViewMouseLeftButtonScroll>
 
         <Label Grid.Column="1" Grid.Row="1"
                Content="{x:Static res:Resources.EnterPassword}"
                FontSize="36" Margin="120,0,0,0" />
 
-        <customControls:ValidatingTextBox x:Name="tbPassword"
-                                Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2"
-                                FontSize="36" Margin="400,0,150,0"
-                                Text="" TextAlignment="Center" />
+        <customControls:ValidatingTextBox x:Name="tbPassword" HorizontalContentAlignment="Center"
+                                Grid.Column="1" Grid.Row="1" VerticalContentAlignment="Center"
+                                FontSize="36" Margin="400,0,150,0" 
+                                 />
 
-        <Label x:Name="lblIncorrect"  Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="2"
+        <Label x:Name="lblIncorrect"  Grid.Column="1" Grid.Row="2" 
                Content="" HorizontalContentAlignment="Right" VerticalContentAlignment="Top"
                FontSize="18" Margin="400,0,150,0" Foreground="{StaticResource xOrange2}"/>
 
-        <Button x:Name="btn_Back" x:FieldModifier="private"
-                    Grid.Column="0" Grid.Row="4"
+        <Button x:Name="btn_Back" x:FieldModifier="private" Style="{StaticResource PrimaryButton}"
+                    Grid.Column="0" Grid.Row="4" 
                     Content="{x:Static res:Resources.Back}"
                     Click="btBack_OnClick"
                      />
 
-        <Grid Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="3">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
-            <Button x:Name="buttonNext" x:FieldModifier="private"
-                    Grid.Column="3"
+
+        <Button x:Name="buttonNext" Grid.Column="1" Grid.Row="4" HorizontalAlignment="Right" Style="{StaticResource PrimaryButton}"
+                     Width="{Binding ElementName=btn_Back, Path=ActualWidth}"
                     Content="{x:Static res:Resources.Next}"
                     Click="ButtonNext_OnClick"
                     Margin="0" />
-        </Grid>
+   
 
     </Grid>
 </Page>
