--- a/SCME.WpfControlLibrary/Pages/ProfilesPage.xaml
+++ b/SCME.WpfControlLibrary/Pages/ProfilesPage.xaml
@@ -22,6 +22,7 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Page.Resources>
+    
     <Grid Grid.IsSharedSizeScope="True">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="25*" />
@@ -36,7 +37,7 @@
                 <RowDefinition Height="auto" />
             </Grid.RowDefinitions>
             <ComboBox Grid.Column="0" Grid.Row="0" SelectedValue="{Binding SelectedMmeCode}" SelectedValuePath="Key"
-                      DisplayMemberPath="Key" ItemsSource="{Binding MmeCodes}"
+                      DisplayMemberPath="Key" ItemsSource="{Binding MmeCodes}" Tag="M"
                       SelectionChanged="ComboBox_SelectionChanged"
                       Visibility="{Binding IsSingleMmeCode, Converter={StaticResource B2VI}}" />
             <Button Grid.Column="0" Grid.Row="1" Style="{StaticResource PrimaryButton}"
@@ -47,71 +48,24 @@
 
             
             <customControls:ValidatingTextBox Grid.Column="0" Grid.Row="2" Tag="{x:Static res:Resources.Search}"
-                                              Text="{Binding SearchingName, UpdateSourceTrigger=PropertyChanged}"
-                                              Style="{StaticResource PlaceholderTextBox}"
+                     Style="{StaticResource PlaceholderTextBox}"
+                                              Text="{Binding SearchingName, UpdateSourceTrigger=PropertyChanged}" Background="White"
+                                                Height="60"  
                                               TextChanged="TextBoxFind_TextChanged" />
 
-            <customControls:ListViewMouseLeftButtonScroll Grid.Row="3" ItemsSource="{Binding ProfilesSource.View}" Style="{StaticResource ListViewProfiles}" x:Name="ListViewProfiles"  ItemContainerStyle="{StaticResource DefaultListViewItemContainerStyle}" AlternationCount="2" 
-                      SelectedValue="{Binding SelectedProfile}" SelectionChanged="ListViewProfiles_OnSelectionChanged"
-                      >
-               <!--<ListView.Template>
-                    <ControlTemplate TargetType="{x:Type ListBox}">
-                        <Border x:Name="border"
-                                BorderBrush="{TemplateBinding BorderBrush}"
-                                BorderThickness="{TemplateBinding BorderThickness}"
-                                Background="{TemplateBinding Background}">
-                            <ScrollViewer Focusable="False" x:Name="ScrollViewer"
-                                          Padding="{TemplateBinding Padding}"
-                                          Background="{TemplateBinding Background}">
-                                <Grid x:Name="Grid">
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="*"/>
-                                        <ColumnDefinition Width="0" x:Name="ColumnDefinition"/>
-                                    </Grid.ColumnDefinitions>
-                                    <ItemsPresenter />
-                                </Grid>
-                            </ScrollViewer>
-                        </Border>
-                        <ControlTemplate.Triggers>
-                            <DataTrigger Binding="{Binding ElementName=ScrollViewer, Path=ComputedVerticalScrollBarVisibility}" Value="True">
-                                <Setter TargetName="ColumnDefinition" Property="Width" Value="60"></Setter>
-                            </DataTrigger>
-                            <Trigger Property="IsEnabled" Value="false">
-                                <Setter TargetName="border" Property="Opacity" Value="0.4" />
-                            </Trigger>
-                        </ControlTemplate.Triggers>
-                    </ControlTemplate>
-                </ListView.Template>-->
-
-                <ListView.ItemTemplate>
-                    <DataTemplate DataType="profiles:Profile">
-                        <Grid Background="Transparent">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*" />
-                                
-                            </Grid.ColumnDefinitions>
-                            <Polygon Name="polygon" Stretch="Fill" Fill="Transparent" Grid.Column="0" Points="0,0 190,0 200,10 190,20 0,20" />
-                            <Label Name="label" Content="{Binding Path=Name}" Grid.Column="0" Background="Transparent" />
-                            
-                        </Grid>
-
-                        <DataTemplate.Triggers>
-                            <DataTrigger
-                    Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ListBoxItem}}, Path=IsSelected}"
-                    Value="True">
-                                <Setter TargetName="polygon" Property="Fill" Value="{StaticResource PurpleBrush1}" />
-                                <Setter TargetName="label" Property="Foreground" Value="White" />
-                            </DataTrigger>
-                            
-                        </DataTemplate.Triggers>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
+            <customControls:ListViewMouseLeftButtonScroll Grid.Row="3" ItemsSource="{Binding ProfilesSource.View}" Style="{StaticResource DefaultListView}" x:Name="ListViewProfiles"  
+                      SelectedValue="{Binding SelectedProfile}" SelectionChanged="ListViewProfiles_OnSelectionChanged">
+               <ListView.ItemTemplate>
+                   <DataTemplate DataType="profiles:Profile">
+                     <Label Name="label" Content="{Binding Path=Name}" Foreground="{TemplateBinding TextBlock.Foreground}" />
+                   </DataTemplate>
+               </ListView.ItemTemplate>
             </customControls:ListViewMouseLeftButtonScroll>
 
-            <Button Grid.Column="0" Grid.Row="4" Content="{x:Static res:Resources.Back}"
-                    Style="{StaticResource BackButton}" Click="GoBack_Click" />
+            <Button Grid.Column="0" Grid.Row="4" Content="{x:Static res:Resources.Back}" Name="BackButton"
+                    Style="{StaticResource PrimaryButton}" Click="GoBack_Click" />
         </Grid>
-        <Grid Grid.Column="1" Grid.Row="0">
+        <Grid Grid.Column="1" Grid.Row="0" Background="{StaticResource PurpleBrush1}">
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto" SharedSizeGroup="ColumnMmeAndName" />
                 <RowDefinition Height="auto" />
@@ -120,7 +74,7 @@
                 <RowDefinition Height="auto" />
             </Grid.RowDefinitions>
 
-            <Grid Grid.Column="0" Grid.Row="0" Visibility="{Binding ReadOnlyMode, Converter={StaticResource B2VI}}">
+            <Grid Grid.Column="0" Grid.Row="0" Visibility="{Binding ReadOnlyMode, Converter={StaticResource B2VI}}" Background="White">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="Auto" />
@@ -128,9 +82,10 @@
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
 
-                <TextBox Grid.Column="0" Grid.Row="0" Text="{Binding SelectedProfileNameCopy}" BorderThickness="0" Margin="10,0,0,0"
+                <customControls:ValidatingTextBox Grid.Column="0" Grid.Row="0" Text="{Binding SelectedProfileNameCopy}" BorderThickness="0" 
+                         VerticalContentAlignment="Center"
                          IsEnabled="{Binding IsEditModeActive}" />
-                <Border BorderThickness="1" Grid.Column="0" Grid.Row="0" BorderBrush="Gray"   />
+                <!--<Border BorderThickness="1" Grid.Column="0" Grid.Row="0" BorderBrush="Gray"   />-->
                 <Button Grid.Column="1" Grid.Row="0" IsEnabled="{Binding IsEditModeEnabled}" 
                         Click="BeginEditProfile_Click" Style="{StaticResource ButtonWithIcon}">
                     <Path Data="{StaticResource Edit}" Style="{StaticResource PathIcon}"/>
@@ -147,7 +102,10 @@
 
             <!--<Border Grid.Column="0" Grid.Row="1" Grid.RowSpan="3"
                     Background="{StaticResource ListViewTestParametersBrush}" />-->
-            <ScrollViewer Grid.Column="0" Grid.Row="1" Grid.RowSpan="3" VerticalAlignment="Stretch" VerticalScrollBarVisibility="Auto">
+            <customControls:ScrollViewerLeftMouseButtonScroll Grid.Column="0" Grid.Row="1" Grid.RowSpan="3" VerticalAlignment="Stretch"  Style="{StaticResource DefaultScrollViewer}">
+                <customControls:ScrollViewerLeftMouseButtonScroll.Resources>
+                    
+                </customControls:ScrollViewerLeftMouseButtonScroll.Resources>
                 <Grid IsSharedSizeScope="True" Background="{StaticResource ListViewTestParametersBrush}">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="1*"/>
@@ -171,7 +129,7 @@
                                     BorderBrush="AliceBlue" Margin="10" Background="{StaticResource ListViewTestParametersBrush}"
                                     IsEnabled="{Binding IsEditModeActive}">
                             <CheckBox Margin="10" DataContext="{Binding ProfileDeepDataCopy}" FlowDirection="RightToLeft"
-                                          IsChecked="{Binding IsHeightMeasureEnabled}"
+                                          IsChecked="{Binding IsHeightMeasureEnabled}" Foreground="White"
                                           Content="{x:Static res:Resources.MeasureDialog_Title}" />
                         </Border>
                     </StackPanel>
@@ -182,9 +140,9 @@
                             PreviewMouseWheel="TestParametersListView_OnPreviewMouseWheel"
                             VirtualizingStackPanel.IsVirtualizing="True" VirtualizingStackPanel.ScrollUnit="Pixel" />
                 </Grid>
-            </ScrollViewer>
+            </customControls:ScrollViewerLeftMouseButtonScroll>
 
-            <Button Grid.Column="0" Grid.Row="4" Style="{StaticResource BackButton}"
+            <Button Grid.Column="0" Grid.Row="4" Style="{StaticResource PrimaryButton}" HorizontalAlignment="Right" Width="{Binding ElementName=BackButton, Path=ActualWidth}"
                     Content="{x:Static res:Resources.Next}"
                     Visibility="{Binding ButtonNextIsVisible, Converter={StaticResource B2V}}"
                     Command="{Binding ButtonNextRelayCommand}" />
