--- a/SCME.WpfControlLibrary/Styles/Colors.xaml
+++ b/SCME.WpfControlLibrary/Styles/Colors.xaml
@@ -1,6 +1,11 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
+
+    <AlternationConverter x:Key="BackgroundConverter">
+        <SolidColorBrush>Transparent</SolidColorBrush>
+        <StaticResource ResourceKey="xGray3" />
+    </AlternationConverter>
+
     <Color x:Key="Purple1">#FF8C0095</Color>
     <Color x:Key="Purple2">#FF9F40DE</Color>
     <Color x:Key="Purple3">#FFB100BA</Color>
@@ -9,6 +14,7 @@
 
     <Color x:Key="ListViewTestParametersColor">#FF8C0095</Color>
     <Color x:Key="WhiteColor">White</Color>
+    <Color x:Key="BlackColor">Black</Color>
     
     <Color x:Key="Blue1">#FF00A7FF</Color>
     
