--- a/SCME.WpfControlLibrary/Styles/Label.xaml
+++ b/SCME.WpfControlLibrary/Styles/Label.xaml
@@ -6,16 +6,34 @@
         <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/Colors.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
-    <Style TargetType="Label" BasedOn="{StaticResource {x:Type Label}}">
+    <Style TargetType="Label" >
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
+        <Setter Property="HorizontalContentAlignment" Value="Left"/>
+        <Setter Property="Padding" Value="0"/>
+        <Setter Property="Margin" Value="0"/>
+        <Setter Property="Opacity" Value="1"/>
+        <Setter Property="BorderBrush" Value="Transparent"/>
+        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="Focusable" Value="False"/>
+        <Setter Property="Foreground" Value="Black"/>
+        <Setter Property="FontFamily" Value="Helvetica Neue LT Std"/>
+        <Setter Property="FontWeight" Value="ExtraLight"/>
+        <Setter Property="TextBlock.TextWrapping" Value="NoWrap"/>
+        <Setter Property="ContentStringFormat" Value=""/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Label}">
+                    <Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}">
+                        <ContentPresenter Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" 
+                                          HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" 
+                                          VerticalAlignment="{TemplateBinding VerticalContentAlignment}" 
+                                          ContentStringFormat="{TemplateBinding ContentStringFormat}"
+                                          />
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
         <Setter Property="FontSize" Value="{DynamicResource SCME.BaseFontSize}" />
-        <Style.Triggers>
-            <DataTrigger Binding="{Binding Background.Color, RelativeSource={RelativeSource AncestorType={x:Type ListView}, Mode=FindAncestor}}" Value="{StaticResource ListViewTestParametersColor}">
-                <Setter Property="Foreground" Value="{StaticResource WhiteColorBrush}"></Setter>
-            </DataTrigger>
-            <DataTrigger Binding="{Binding Background.Color, RelativeSource={RelativeSource AncestorType={x:Type profilesPageComponents:AddTestParameterUserControl}, Mode=FindAncestor}}" Value="{StaticResource ListViewTestParametersColor}">
-                <Setter Property="Foreground" Value="{StaticResource WhiteColorBrush}"></Setter>
-            </DataTrigger>
-        </Style.Triggers>
     </Style>
 
     <Style TargetType="Label" x:Key="LabelIconButton" BasedOn="{StaticResource {x:Type Label}}">
