--- a/SCME.WpfControlLibrary/Styles/PlaceHolderValidatingTextBox.xaml
+++ b/SCME.WpfControlLibrary/Styles/PlaceHolderValidatingTextBox.xaml
@@ -1,21 +1,20 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:customControls="clr-namespace:SCME.WpfControlLibrary.CustomControls">
-    <Style x:Key="PlaceholderTextBox" TargetType="{x:Type customControls:ValidatingTextBox}">
+    <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/TextBlock.xaml" />
+        <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/TextBox.xaml" />
+    </ResourceDictionary.MergedDictionaries>
+    <Style x:Key="PlaceholderTextBox" TargetType="{x:Type TextBox}" BasedOn="{StaticResource {x:Type TextBox}}">
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type customControls:ValidatingTextBox}">
-                    <Grid>
-                        <customControls:ValidatingTextBox
-                            Text="{Binding Path=Text,
-                                                RelativeSource={RelativeSource TemplatedParent}, 
-                                                Mode=TwoWay,
-                                                UpdateSourceTrigger=PropertyChanged}"
-                            x:Name="textSource"
-                            Background="Transparent"
-                            Panel.ZIndex="2" />
-                        <TextBox Text="{TemplateBinding Tag}" Background="{TemplateBinding Background}"
-                                 Panel.ZIndex="1" FontSize="24"  >
+                <ControlTemplate >
+                        <Grid>
+                        <TextBox
+                            Text="{Binding Path=Text, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                            x:Name="textSource" Background="Transparent" Panel.ZIndex="2" BorderThickness="0" VerticalContentAlignment="Center" />
+                        <TextBox Text="{TemplateBinding Tag}" Background="{TemplateBinding Background}" VerticalContentAlignment="Center"
+                                 Panel.ZIndex="1" FontSize="{DynamicResource SCME.BaseFontSize}" BorderThickness="0" >
                             <TextBox.Style>
                                 <Style TargetType="{x:Type TextBox}">
                                     <Setter Property="Foreground" Value="Transparent" />
@@ -28,6 +27,7 @@
                             </TextBox.Style>
                         </TextBox>
                     </Grid>
+              
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
