--- a/SCME.WpfControlLibrary/Styles/ScrollBar.xaml
+++ b/SCME.WpfControlLibrary/Styles/ScrollBar.xaml
@@ -66,7 +66,7 @@
         </Setter>
     </Style>
 
-    <Style  TargetType="{x:Type ScrollViewer}">
+    <Style  TargetType="{x:Type ScrollViewer}" x:Key="DefaultScrollViewer">
         <Setter Property="OverridesDefaultStyle" Value="True" />
         <Setter Property="Background" Value="Transparent" />
         <Setter Property="VerticalScrollBarVisibility" Value="Auto" />
